exports[`test splits the path into 3 when crossing from the bottom 1`] = `
Array [
  Object {
    "points": Array [
      Object {
        "x": 0,
        "y": 20,
      },
      Object {
        "x": 0,
        "y": 10,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Object {
        "x": 0,
        "y": 10,
      },
      Object {
        "x": 0,
        "y": -10,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "points": Array [
      Object {
        "x": 0,
        "y": -10,
      },
      Object {
        "x": 0,
        "y": -20,
      },
    ],
    "strokeWidth": 0,
  },
]
`;

exports[`test splits the path into 3 when crossing from the bottom far inside the grid 1`] = `
Array [
  Object {
    "points": Array [
      Object {
        "x": 0,
        "y": 520,
      },
      Object {
        "x": 0,
        "y": 510,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Object {
        "x": 0,
        "y": 510,
      },
      Object {
        "x": 0,
        "y": 490,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "points": Array [
      Object {
        "x": 0,
        "y": 490,
      },
      Object {
        "x": 0,
        "y": 480,
      },
    ],
    "strokeWidth": 0,
  },
]
`;

exports[`test splits the path into 3 when crossing from the left 1`] = `
Array [
  Object {
    "points": Array [
      Object {
        "x": 20,
        "y": 0,
      },
      Object {
        "x": 10,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Object {
        "x": 10,
        "y": 0,
      },
      Object {
        "x": -10,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "points": Array [
      Object {
        "x": -10,
        "y": 0,
      },
      Object {
        "x": -20,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
]
`;

exports[`test splits the path into 3 when crossing from the left far inside the grid 1`] = `
Array [
  Object {
    "points": Array [
      Object {
        "x": 520,
        "y": 0,
      },
      Object {
        "x": 510,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Object {
        "x": 510,
        "y": 0,
      },
      Object {
        "x": 490,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "points": Array [
      Object {
        "x": 490,
        "y": 0,
      },
      Object {
        "x": 480,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
]
`;

exports[`test splits the path into 3 when crossing from the right 1`] = `
Array [
  Object {
    "points": Array [
      Object {
        "x": -20,
        "y": 0,
      },
      Object {
        "x": -10,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Object {
        "x": -10,
        "y": 0,
      },
      Object {
        "x": 10,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "points": Array [
      Object {
        "x": 10,
        "y": 0,
      },
      Object {
        "x": 20,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
]
`;

exports[`test splits the path into 3 when crossing from the right far inside the grid 1`] = `
Array [
  Object {
    "points": Array [
      Object {
        "x": 480,
        "y": 0,
      },
      Object {
        "x": 490,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Object {
        "x": 490,
        "y": 0,
      },
      Object {
        "x": 510,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "points": Array [
      Object {
        "x": 510,
        "y": 0,
      },
      Object {
        "x": 520,
        "y": 0,
      },
    ],
    "strokeWidth": 0,
  },
]
`;

exports[`test splits the path into 3 when crossing from the top 1`] = `
Array [
  Object {
    "points": Array [
      Object {
        "x": 0,
        "y": -20,
      },
      Object {
        "x": 0,
        "y": -10,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Object {
        "x": 0,
        "y": -10,
      },
      Object {
        "x": 0,
        "y": 10,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "points": Array [
      Object {
        "x": 0,
        "y": 10,
      },
      Object {
        "x": 0,
        "y": 20,
      },
    ],
    "strokeWidth": 0,
  },
]
`;

exports[`test splits the path into 3 when crossing from the top far inside the grid 1`] = `
Array [
  Object {
    "points": Array [
      Object {
        "x": 0,
        "y": 480,
      },
      Object {
        "x": 0,
        "y": 490,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "intersectsGrid": true,
    "points": Array [
      Object {
        "x": 0,
        "y": 490,
      },
      Object {
        "x": 0,
        "y": 510,
      },
    ],
    "strokeWidth": 0,
  },
  Object {
    "points": Array [
      Object {
        "x": 0,
        "y": 510,
      },
      Object {
        "x": 0,
        "y": 520,
      },
    ],
    "strokeWidth": 0,
  },
]
`;
